import "com/message/v1/user.proto";

package com.message.v1;

message Chat {
    required User from_user = 1;
    required User to_user = 2;
}
